# computational-physics

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md
.circleci/: config.yml
ComputationalPhysics.xcodeproj/: project.pbxproj
ComputationalPhysics.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ComputationalPhysics.xcodeproj/xcshareddata/xcschemes/: Computational Physics.xcscheme
NumericalPDEs/: main.cpp
NumericalPDEs.xcodeproj/: project.pbxproj
NumericalPDEs.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NumericalPDEs.xcodeproj/xcshareddata/xcschemes/: Numerical PDEs.xcscheme
NumericalPDEs/graphics/: MyOpenGL.cpp
NumericalPDEs/math/: containers.hpp  math.hpp
NumericalPDEs/math/algorithms/: algorithms.hpp  find.hpp
NumericalPDEs/math/containers/: matrix.cpp  matrix.hpp  vector.hpp
NumericalPDEs/math/differential_equations/: SolveEDP.cpp
Tests/: Tests-Bridging-Header.h  TestsTools.h  TestsTools.m  TestsTools.mm
Tests/math/: MathTests.mm
Tests/math/containers/: MatrixPerformance.mm  MatrixTests.mm  vector.h  (+4 more)
Vibration Normal Modes 2D/: MyOpenGL.cpp  MyOpenGL.h  SolveEDP.cpp  SolveEDP.h  Vectorial.cpp  Vectorial.h  Vibration_Normal_Modes_2D.1  main.cpp
Vibration Normal Modes 2D.xcodeproj/: project.pbxproj
Vibration Normal Modes 2D.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Vibration Normal Modes 2D/graphics/: MyOpenGL.cpp  MyOpenGL.h
computational-physics/: main.cpp
computational-physics/graphics/: MyOpenGL.cpp
computational-physics/math/: containers.hpp  math.hpp
(+33 files in other folders)
